# vol_regime_engine

./: .gitignore  README.md  pyproject.toml
src/screening/: acceleration_model.py  action_engine.py  regime_classifier.py  regime_confidence.py  structure_extractor.py
src/vol_regime_engine/: VolRegimeDashboard.py  __init__.py  create_candlestick_project.py  create_quantpriceaction_project.py  engine.py  generate_convexity_project.py
src/vol_regime_engine/adaptive_signal_engine/: __init__.py  config.py  engine.py  enums.py  persistence.py
src/vol_regime_engine/candlestick_engine/: README.md  pyproject.toml
src/vol_regime_engine/candlestick_engine/candlestick_engine/: __init__.py  engine.py
src/vol_regime_engine/candlestick_engine/candlestick_engine/core/: features.py
src/vol_regime_engine/candlestick_engine/candlestick_engine/patterns/: __init__.py  double.py  registry.py  single.py  triple.py
src/vol_regime_engine/convexity_dashboard/: README.md
src/vol_regime_engine/core/: engine_state.py
src/vol_regime_engine/db_read_write/: firebase_metric_writer.py  sanitizer.py
src/vol_regime_engine/futurestates/: futures_state_engine.py
src/vol_regime_engine/gamma/: convexity.py  gamma_flip.py  gamma_gradient.py  gex.py  instability.py
src/vol_regime_engine/indicators/: atr.py  convexity_shock_percent.py  surface_regime.py
src/vol_regime_engine/intraday/: change_html_logger.py  change_logger.py  log_monitor.py  snapshot_monitor.py  state_change.py
src/vol_regime_engine/quantpriceaction/: README.md  pyproject.toml
src/vol_regime_engine/quantpriceaction/quantpriceaction/: __init__.py  engine.py
src/vol_regime_engine/quantpriceaction/quantpriceaction/core/: constraints.py
src/vol_regime_engine/quantpriceaction/quantpriceaction/gpu/: engine.py
src/vol_regime_engine/quantpriceaction/quantpriceaction/patterns/: autoload.py  base.py  registry.py
src/vol_regime_engine/quantpriceaction/tests/: test_basic.py
(+56 files in other folders)
