[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vol_regime_engine"
version = "0.1.0"
description = "Volatility Regime Detection Engine"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "reportlab>=4.0.0",
    "dash>=2.17.0",
    "plotly>=5.22.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
