[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "candlestick-engine"
    version = "0.1.0"
    description = "Vectorized Candlestick Pattern Detection Engine"
    authors = [{name = "Your Name"}]
    readme = "README.md"
    requires-python = ">=3.9"
    dependencies = [
        "pandas",
        "numpy"
    ]

    [tool.setuptools.packages.find]
    where = ["."]